@@ -20,6 +20,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #7349: Make methods of file objects in the io module accept None as an
+  argument where file-like objects (ie StringIO and BytesIO) accept them to mean
+  the same as passing no argument.
+
 - Issue #7348: StringIO.StringIO.readline(-1) now acts as if it got no argument
   like other file objects.
 
